# wai-hspec-example

./: LICENSE  README.md  testing-wai-app-with-hspec-ja.md  testing-wai-app-with-hspec.md  wai-hspec-example.cabal
src/: App.hs  Main.hs  Views.hs
src/Views/: foo.mustache  index.mustache
test/: AppSpec.hs  Helper.hs
